# sprint_one

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml
allure-report/: index.html
allure-report/export/: influxDbData.txt
pages/playwright/: base_page.py  cicd_page.py  contact_sales_page.py  github_login_page.py  home_page.py  resources_menu.py  search_page.py  solutions_menu.py
pages/selenium/: base_page.py  cicd_page.py  contact_sales_page.py  github_login_page.py  home_page.py  resources_menu.py  search_page.py  solutions_menu.py
practice/: loops_practice.py
practice_2/pages/: base_page.py  login_page.py
practice_2/tests/: test_login_success.py
tests/: test_sample.py
tests/api/: test_api_reqres.py  test_api_sample.py  test_get_rate.py
tests/playwright/: conftest.py  test_github_login.py  test_search.py  test_solutions_menu.py
tests/selenium/: conftest.py  test_github_login.py  test_search.py  test_solutions_menu.py
